--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.16.0)  
-project(Project_Name)                          
+project(Shapes)
 
-add_executable(Executable_Name ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} main.cpp)                         
 
 target_include_directories(${PROJECT_NAME} PUBLIC inc)
-target_sources(${PROJECT_NAME} PUBLIC scr/scr.cpp)
+target_sources(${PROJECT_NAME} PUBLIC src/Shape.cpp src/Circle.cpp)
+
+
